# mcsm-benchs

./: .buildinfo  CITATION.cff  README.md  code_of_conduct.html  collab.html  collab_benchs.html  contrib.html  contributions.html  genindex.html  index.html  install.html  installation.html  intro.html  introduction.html  mcsm_benchmarks.html  mcsm_benchs.html  modules.html  notebooks_link.html  objects.inv  paper.bib  paper.md  py-modindex.html  pyproject  pyproject.toml  related_works.html  search.html  searchindex.js
.github/workflows/: build_docs.yml  main.yml  test.yml  tests.yml
_modules/: index.html
_modules/mcsm_benchmarks/: Benchmark.html  MatlabInterface.html  ResultsInterpreter.html  (+2 more)
_sources/: code_of_conduct.md.txt  collab.md.txt  index.rst.txt  install.md.txt  installation.rst.txt  intro.md.txt  mcsm_benchs.rst.txt  modules.rst.txt
docs/: collab.md  collab_benchs.rst  conf.py  contrib.rst  contributions.md  index.rst  install.md  installation.rst  intro.md  introduction.rst  mcsm_benchmarks.rst  mcsm_benchs.rst  notebooks_link.rst  refs.bib  related_works.md
mcsm_benchmarks/: Benchmark.py  MatlabInterface.py  ResultsInterpreter.py  SignalBank.py  benchmark_utils.py  utilstf.py
mcsm_benchs/: Benchmark.py  MatlabInterface.py  OctaveInterface.py  ResultsInterpreter.py  SignalBank.py  benchmark_utils.py
notebooks/: 6_female.csv  6_male.csv  demo_benchmark.html  demo_benchmark.ipynb  demo_noise_function.html  demo_noise_function.ipynb  demo_other_user_inputs.html  demo_other_user_inputs.ipynb  demo_quering_signals.html  demo_quering_signals.ipynb  demo_signal_bank.html  demo_signal_bank.ipynb  figure_all_signals.ipynb  utils.py
tests/: test_basic_benchmark.py  test_benchmark.py  test_signal_bank.py
(+60 files in other folders)
