[tool.poetry]
name = "mcsm-benchmarks"
version = "0.1.0"
description = "A benchmarking toolbox for Multi-Component Signal Methods."
authors = ["jmiramont <jmiramontt@univ-lille.fr>"]
readme = "README.md"
packages = [{include = "mcsm_benchmarks"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "^1.22.0"
matplotlib = "^3.5.1"
pandas = "^1.4.4"
scipy = "^1.7.3"
seaborn = "^0.12.0"
pytest = "^7.0.1"
tabulate = "^0.8.9"
plotly = "^5.10.0"
matlabengine = { version = "^9.11.19", optional = true } #9.13.6
ipykernel = {version = "^6.6.1", optional = true}


[tool.poetry.extras]
# Documentation
# configuration in docs/conf.py
# rstcheck = { version = "^3.3.1", optional = true }
# Sphinx = { version = "^4.0.3", optional = true }
# Sphinx extensions https://www.sphinx-doc.org/en/master/usage/extensions/index.html
# Manage bibliography .bib files
# https://github.com/mcmtroffaes/sphinxcontrib-bibtex
# sphinxcontrib-bibtex = { version = "^2.3.0", optional = true }
# Checks syntax of reStructuredText and code blocks nested within it https://github.com/myint/rstcheck

# Jupyter notebooks to be edited in VSCode
notebooks = ["ipykernel"]
docs = ["Sphinx", "sphinx-rtd-theme", "nbsphinx", "sphinxcontrib-bibtex"]
matlab_tools = ["matlabengine"]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"
Sphinx = ">=6,<8"
sphinx-rtd-theme = "^1.0.0"
nbsphinx = "^0.9.2"
sphinxcontrib-bibtex  = "^2.5.0"
myst-parser =  "^2.0.0"
sphinx-copybutton = "^0.5.2"
insegel = "^1.3.1"
sphinx-press-theme = "^0.8.0"
sphinx-material = "^0.0.36"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
